# db_agents

./: csv_agent.py  first_agent.py  fun_call_db_agents.py  function_calling.py  json_agent.py  pyproject.toml  salary.db  sql_db_agent.py
db/: salary.db
